2010-06-21  Andreas Schwab  <schwab@redhat.com>

	* doc/as.texinfo (Overview): Use @itemx for grouped @table
	items.
	* doc/c-alpha.texi (Alpha Options): Likewise.
	* doc/c-arm.texi (ARM Directives): Likewise.
	* doc/c-bfin.texi (Blackfin Options): Likewise.
	* doc/c-d10v.texi (D10V-Opts): Likewise.
	* doc/c-i386.texi (i386-Options): Likewise.
	* doc/c-ia64.texi (IA-64 Options): Likewise.
	* doc/c-m68k.texi (M68K-Opts): Likewise.
	* doc/c-tic54x.texi (TIC54X-Directives): Likewise.
	* doc/internals.texi (Symbols): Likewise.

2010-06-21  Alan Modra  <amodra@gmail.com>

	PR gas/11733
	* config/tc-sh.c (find_cooked_opcode): Correct array bounds check.

2010-06-18  Joseph Myers  <joseph@codesourcery.com>

	* config/tc-tic6x.h (tic6x_segment_info_type): Add field
	func_units_used.
	* config/tc-tic6x.c (tic6x_cons_align: Clear func_units_used.
	(md_assemble): Clear func_units_used for new execute packet.
	Check for duplicate functional units and update func_units_used
	for instructions using a functional unit.

2010-06-15  Joseph Myers  <joseph@codesourcery.com>

	* config/tc-tic6x.c: Include elf/tic6x.h.
	(tic6x_arch_attribute, tic6x_seen_insns): New.
	(tic6x_arch_table, tic6x_arches): Add attribute values.
	(tic6x_use_arch): Handle attribute settings.
	(tic6x_attributes_set_explicitly, s_tic6x_c6xabi_attribute,
	tic6x_attribute_table, tic6x_attributes,
	tic6x_convert_symbolic_attribute): New.
	(md_pseudo_table): Add c6xabi_attribute.
	(md_assemble): Set tic6x_seen_insns and tic6x_arch_attribute.
	(tic6x_set_attribute_int, tic6x_set_attributes): New.
	(tic6x_end): Call tic6x_set_attributes.
	* config/tc-tic6x.h (CONVERT_SYMBOLIC_ATTRIBUTE): Define.
	(tic6x_convert_symbolic_attribute): Declare.

2010-06-14  Alan Modra  <amodra@gmail.com>

	* config/tc-ppc.c (md_assemble): Emit APUinfo section for
	PPC_OPCODE_E500.

2010-06-11  Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.c (md_parse_option): Ignore impossible processor
	types.
	(show_arch): New parameter 'check'.